Bug 8048 - better spacing on categories for attributes
 - Convert <h4> to <caption> and adding comfortable padding.
 - Add quotes to attribute for validity
 - Add padding to patron messaging note too since it has
   the same problem.

To test you must have at least one value added to the PA_CLASS
authorised value category. At least one patron attribute must
be categorized using that value.

On the patron edit screen that patron attribute category should
display with comfortable padding.


Looks much better!

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -692,6 +692,14 @@ fieldset.rows ol.radio label.radio {
 	margin-right : 1em;
 }
 
+fieldset.rows caption {
+    font-size : 120%;
+}
+
+fieldset.rows p {
+    margin : 1em 0 1em 1em;
+}
+
 fieldset.rows table {
 	font-size : 105%;
 	clear : both;
